//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Users {
  id String [pk]
  email String [unique, not null]
  name String
  lastName String
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  ratings Ratings [not null]
  role String [not null, default: 'USER']
  active Boolean [not null, default: true]
  favouriteGenres UserFavouriteGenres [not null]
  favouriteBooks UserFavouriteBooks [not null]
  favouriteAuthors UserFavouriteAuthors [not null]
}

Table Authors {
  id Int [pk, increment]
  name String [not null]
  lastName String
  books Books [not null]
  favouriteAuthors UserFavouriteAuthors [not null]
}

Table Ratings {
  id Int [pk, increment]
  book Books [not null]
  bookId Int [not null]
  user Users [not null]
  userId String [not null]
  comment String
  rating Int [not null]
}

Table Books {
  id Int [pk, increment]
  title String [not null]
  description String
  isbn String
  author Authors [not null]
  authorId Int [not null]
  coverUrl String
  ratingValue Float [not null, default: 0]
  ratingCount Int [not null, default: 0]
  ratings Ratings [not null]
  genres BookGenres [not null]
  favouriteBooks UserFavouriteBooks [not null]
}

Table Genres {
  id Int [pk, increment]
  name String [not null]
  books BookGenres [not null]
  favouriteGenres UserFavouriteGenres [not null]
}

Table BookGenres {
  book Books [not null]
  bookId Int [not null]
  genre Genres [not null]
  genreId Int [not null]

  indexes {
    (bookId, genreId) [pk]
  }
}

Table UserFavouriteGenres {
  user Users [not null]
  userId String [not null]
  genre Genres [not null]
  genreId Int [not null]

  indexes {
    (userId, genreId) [pk]
  }
}

Table UserFavouriteBooks {
  user Users [not null]
  userId String [not null]
  book Books [not null]
  bookId Int [not null]

  indexes {
    (userId, bookId) [pk]
  }
}

Table UserFavouriteAuthors {
  user Users [not null]
  userId String [not null]
  author Authors [not null]
  authorId Int [not null]

  indexes {
    (userId, authorId) [pk]
  }
}

Table MailTemplates {
  id String [pk]
  aliasName String [unique, not null]
  templateName String [not null]
  dynamicVariables String [not null]
}

Ref: Ratings.bookId > Books.id [delete: Cascade]

Ref: Ratings.userId > Users.id [delete: Cascade]

Ref: Books.authorId > Authors.id [delete: Restrict]

Ref: BookGenres.bookId > Books.id [delete: Cascade]

Ref: BookGenres.genreId > Genres.id [delete: Restrict]

Ref: UserFavouriteGenres.userId > Users.id [delete: Cascade]

Ref: UserFavouriteGenres.genreId > Genres.id [delete: Cascade]

Ref: UserFavouriteBooks.userId > Users.id [delete: Cascade]

Ref: UserFavouriteBooks.bookId > Books.id [delete: Cascade]

Ref: UserFavouriteAuthors.userId > Users.id [delete: Cascade]

Ref: UserFavouriteAuthors.authorId > Authors.id [delete: Cascade]